[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AtCoder で使用可能な Rust のライブラリ。詳細は以下を参照。
# https://img.atcoder.jp/file/language-update/language-list.html
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = "=0.4.1"
amplify = "=3.14.2"
amplify_derive = "=2.11.3"
amplify_num = "=0.4.1"
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = "=0.8.5"
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = "=0.4.5"
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"

[[bin]]
name = "abc401a"
path = "/home/atcoder/app/src/abc/401/a.rs"

[[bin]]
name = "abc401b"
path = "/home/atcoder/app/src/abc/401/b.rs"

[[bin]]
name = "abc402a"
path = "/home/atcoder/app/src/abc/402/a.rs"

[[bin]]
name = "abc402b"
path = "/home/atcoder/app/src/abc/402/b.rs"

[[bin]]
name = "abc402c"
path = "/home/atcoder/app/src/abc/402/c.rs"

[[bin]]
name = "abc402d"
path = "/home/atcoder/app/src/abc/402/d.rs"

[[bin]]
name = "abc402e"
path = "/home/atcoder/app/src/abc/402/e.rs"

[[bin]]
name = "abc402f"
path = "/home/atcoder/app/src/abc/402/f.rs"

[[bin]]
name = "abc402g"
path = "/home/atcoder/app/src/abc/402/g.rs"

[[bin]]
name = "abc403a"
path = "/home/atcoder/app/src/abc/403/a.rs"

[[bin]]
name = "abc403b"
path = "/home/atcoder/app/src/abc/403/b.rs"

[[bin]]
name = "abc403c"
path = "/home/atcoder/app/src/abc/403/c.rs"

[[bin]]
name = "abc403d"
path = "/home/atcoder/app/src/abc/403/d.rs"

[[bin]]
name = "abc403e"
path = "/home/atcoder/app/src/abc/403/e.rs"

[[bin]]
name = "abc403f"
path = "/home/atcoder/app/src/abc/403/f.rs"

[[bin]]
name = "abc403g"
path = "/home/atcoder/app/src/abc/403/g.rs"

[[bin]]
name = "abc404a"
path = "/home/atcoder/app/src/abc/404/a.rs"

[[bin]]
name = "abc404b"
path = "/home/atcoder/app/src/abc/404/b.rs"

[[bin]]
name = "abc404c"
path = "/home/atcoder/app/src/abc/404/c.rs"

[[bin]]
name = "abc404d"
path = "/home/atcoder/app/src/abc/404/d.rs"

[[bin]]
name = "abc404e"
path = "/home/atcoder/app/src/abc/404/e.rs"

[[bin]]
name = "abc404f"
path = "/home/atcoder/app/src/abc/404/f.rs"

[[bin]]
name = "abc404g"
path = "/home/atcoder/app/src/abc/404/g.rs"

[[bin]]
name = "abc405a"
path = "/home/atcoder/app/src/abc/405/a.rs"

[[test]]
name = "test_abc405a"
path = "/home/atcoder/app/src/abc/405/test_a.rs"

[[bin]]
name = "abc405b"
path = "/home/atcoder/app/src/abc/405/b.rs"

[[test]]
name = "test_abc405b"
path = "/home/atcoder/app/src/abc/405/test_b.rs"

[[bin]]
name = "abc405c"
path = "/home/atcoder/app/src/abc/405/c.rs"

[[test]]
name = "test_abc405c"
path = "/home/atcoder/app/src/abc/405/test_c.rs"

[[bin]]
name = "abc405d"
path = "/home/atcoder/app/src/abc/405/d.rs"

[[test]]
name = "test_abc405d"
path = "/home/atcoder/app/src/abc/405/test_d.rs"

[[bin]]
name = "abc405e"
path = "/home/atcoder/app/src/abc/405/e.rs"

[[test]]
name = "test_abc405e"
path = "/home/atcoder/app/src/abc/405/test_e.rs"

[[bin]]
name = "abc405f"
path = "/home/atcoder/app/src/abc/405/f.rs"

[[test]]
name = "test_abc405f"
path = "/home/atcoder/app/src/abc/405/test_f.rs"

[[bin]]
name = "abc405g"
path = "/home/atcoder/app/src/abc/405/g.rs"

[[test]]
name = "test_abc405g"
path = "/home/atcoder/app/src/abc/405/test_g.rs"
